data/all_generated_tests/raw_wast_tests/call_IncorrectConditionEvaluation_3528.wast
;; 7. **Test Description:** Use a `call` instruction after a `br_if` where the condition is checking a boolean result of another call. The expected result should diverge in `wizard_engine` if it performs argument checking and condition evaluation accurately, revealing faults in WebAssembly. Specific Constraint:** Condition checks based on function calls.

(assert_invalid
  (module
    (type (func (param i32) (result i32)))
    (func $conditional_call
      (call 1 (i32.const 1)) 
      (br_if 0 (call 1 (call 2 (i32.const 1))))
      (call 2 (i32.const 1))
    )
    (func (param i32) (result i32) (i32.const 0))
    (func (param i32) (result i32) (i32.const 1))
  )
  "type mismatch"
)